other-vpol/allowed-image-repos/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: allowed-image-repos-ns
spec:
  containers:
    - name: pod-01
      image: myknownimage
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: allowed-image-repos-ns
spec:
  containers:
    - name: pod-01
      image: ghcr.io/images/myknownimage:1.26
    - name: pod-02
      image: ghcr.io/kyverno/kyverno:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  namespace: allowed-image-repos-ns
spec:
  initContainers:
    - name: pod-01-init
      image: kyverno:latest
    - name: pod-02-init
      image: myknownimage
  containers:
    - name: pod-01
      image: myknownimage:1.14
    - name: pod-02
      image: kyverno
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-registry-digest
  namespace: allowed-image-repos-ns
spec:
  containers:
  - image: ghcr.io/kyverno/kyverno@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-myknownimage-digest
  namespace: allowed-image-repos-ns
spec:
  containers:
  - image: ghcr.io/images/myknownimage@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: app
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-init-digest
  namespace: allowed-image-repos-ns
spec:
  containers:
  - image: kyverno
    name: app
  initContainers:
  - image: ghcr.io/example/kyverno@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    name: extra
