other-vpol/allowed-image-repos/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
  namespace: allowed-image-repos-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: bb-01-init
        image: ghcr.io/kyverno/test-busybox:1.35
      containers:
      - name: bb-01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment02
  namespace: allowed-image-repos-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: bb01-init
        image: ghcr.io/kyverno/test-busybox:1.35
      containers:
      - name: bb-01
        image: myknownimage
      - name: bb-02
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
  namespace: allowed-image-repos-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: bb-01-init
            image: kyverno
          containers:
            - name: bb-01
              image: ghcr.io/kyverno/test-busybox:1.35
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
  namespace: allowed-image-repos-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: bb01-init
            image: ghcr.io/kyverno/test-busybox:1.35
          containers:
          - name: bb-01
            image: kyverno
          - name: bb-02
            image: myknownimage
          restartPolicy: OnFailure
