other-vpol/allowed-image-repos/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: allowed-image-repos
status:
  conditionStatus:
    (conditions[?type == 'WebhookConfigured']):
    - reason: Succeeded
      type: WebhookConfigured
      status: "True"
    (conditions[?type == 'RBACPermissionsGranted']):
    - reason: Succeeded
      type: RBACPermissionsGranted
      status: "True"
